# OpenPlexity-Pages

./: .env  .gitignore  .replit  README.md  ai_api.py  app.py  prompt.py  prompt_states.json  prompt_template.txt  pyproject.toml  utils.py
experiments/: app.py  app_light.py  groq.py  groq_api.py  huggingface.py  ppl_api_prompt_tests.py  ppl_api_tests.py  prompts.py  toggles_state.py  vertex_api.py  word_count_logic.md
openplexity_pages/: agent_writer.py  app.py  article_styler.py  crew.py  custom_api.py  deepinfra.py  groq_search.py  openrouter.py  ppl_api.py  prompt.txt  prompt_helper.py  prompt_states.json  prompt_states.py  prompts.py  rentry.py  serper_api.py  toggle_states.json  toggle_states.py  toggles_helper.py  toggles_state.py  vertex_api.py
openplexity_pages/output-files/: new_file_agent_3_20240723_215550.md  new_file_agent_3_20240723_215729.md  new_file_agent_3_20240724_084810.md  new_file_agent_3_20240724_084933.md  new_file_agent_3_20240724_085025.md  output_task_is_research_20240724_114106.md  output_task_is_research_20240724_114559.md  output_task_is_writing_20240724_113908.md  output_task_is_writing_20240724_114106.md  output_task_is_writing_20240724_114559.md
output-files/: new_file_agent_3_20240723_223526.md  new_file_agent_3_20240723_223824.md  output_task_is_research_20240724_114756.md  output_task_is_writing_20240724_114950.md  output_task_is_writing_20240724_121534.md  output_task_is_writing_20240724_122135.md  output_task_is_writing_20240724_125128.md  output_task_is_writing_20240724_130240.md  output_task_is_writing_20240724_153432.md  output_task_is_writing_20240724_153547.md  output_task_is_writing_20240724_155256.md  output_task_is_writing_20240724_162729.md
